--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/alexrat22/goit-node-hw-01/issues"
   },
-  "homepage": "https://github.com/alexrat22/goit-node-hw-01#readme"
+  "homepage": "https://github.com/alexrat22/goit-node-hw-01#readme",
+  "dependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
