--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/alexrat22/goit-node-hw-01/issues"
   },
   "homepage": "https://github.com/alexrat22/goit-node-hw-01#readme",
-  "dependencies": {
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
