--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/alexrat22/goit-node-hw-01#readme",
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "commander": "^11.0.0",
+    "nanoid": "^3.3.4"
   }
 }
